# mutahunter

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  tem.txt
.github/workflows/: test.yaml
examples/go_webservice/: README.md  app.go  app_test.go  app_test.go.bak  coverage.xml  mutant_analysis.md  mutants.json
examples/go_webservice/logs/_latest/: mutants_killed.json  mutants_survived.json  mutation_coverage.json  test_suite_report.md
examples/go_webservice/logs/_latest/mutants/: 10_app.go  1_app.go  2_app.go  3_app.go  4_app.go  5_app.go  6_app.go  7_app.go  8_app.go  9_app.go
examples/java_maven/: jacoco.xml  mutant_analysis.md  mutants.json  pom.xml  readme.md
examples/java_maven/logs/_latest/: mutants_killed.json  mutants_survived.json  mutation_coverage.json  test_suite_report.md
examples/java_maven/logs/_latest/mutants/: 1_Calculator.java  2_Calculator.java  3_Calculator.java  4_Calculator.java
examples/java_maven/src/test/java/: BankAccountTest.java  CalculatorTest.java
examples/js_vanilla/: README.md  coverage.xml  mutant_analysis.md  mutants.json  package.json  ui.test.js
examples/js_vanilla/logs/_latest/: mutants_killed.json  mutants_survived.json  mutation_coverage.json  mutation_coverage_detail.json  test_suite_report.md
examples/js_vanilla/logs/_latest/mutants/: 1_ui.js  2_ui.js  3_ui.js  4_ui.js  5_ui.js
examples/python_fastapi/: README.md  app.py  coverage.xml  mutant_analysis.md  mutants.json  test_app.py
examples/python_fastapi/logs/_latest/: mutants_killed.json  mutants_survived.json  mutation_coverage.json  test_suite_report.md
examples/python_fastapi/logs/_latest/mutants/: 10_app.py  11_app.py  1_app.py  2_app.py  3_app.py  4_app.py  5_app.py  6_app.py  7_app.py  8_app.py  9_app.py
examples/python_fastapi/tests/: test_app.py
examples/vite-react-testing-ts/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
examples/vite-react-testing-ts/src/: App.test.tsx  App.tsx  main.tsx  setupTests.ts
src/mutahunter/: main.py
src/mutahunter/core/: analyzer.py  code_merger.py  controller.py  coverage_processor.py  db.py  error_parser.py  exceptions.py  git_handler.py  hunter.py  io.py  llm_mutation_engine.py  logger.py  mutator.py  parsers.py  prompt_factory.py  repomap.py  report.py  router.py  runner.py  unit_test_gen.py  unit_test_gen_with_mutants.py  unittest_gen_line.py  unittest_gen_mutation.py  unittest_gen_with_mutants.py  unittest_generator.py  utils.py
src/mutahunter/core/entities/: config.py  mutant.py
src/mutahunter/core/pilot/aider/: repomap.py  search_replace.py  udiff_coder.py
src/mutahunter/core/pilot/prompts/: examples.py  factory.py  go.py  javascript.py  python.py  system.py  user.py
src/mutahunter/core/prompts/: analysis.py  examples.py  factory.py  mutant_generator.py  system.py  unittest_generator.py  user.py
src/mutahunter/core/queries/: tree-sitter-go-tags.scm  tree-sitter-java-tags.scm  tree-sitter-javascript-tags.scm  tree-sitter-python-tags.scm
src/mutahunter/core/templates/: file_detail_template.html  report_template.html
src/mutahunter/core/templates/mutant_generation/: analyzer_system.txt  analyzer_user.txt  mutator_system.txt  (+1 more)
tests/: test_analyzer.py  test_coverage_processor.py  test_hunter.py  test_report.py  test_runner.py
(+11 files in other folders)
